﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Minor]
 - dep_utils: Cache misc lookup calls to git for speed.

 [Dependencies::Stats]
 - Dependencies changed since 2.016004, see misc/*.deps* for details
 - develop: ↑10
 - runtime: ↑11 (recommends: +3)
 - test: +3 ↑2 (recommends: +1 ↑1)

2.016004 2014-07-16T12:05:55Z
 [00 Minor]
 - dep_utils: Factor out primary summary logic into its own dist.

 [Dependencies::Stats]
 - Dependencies changed since 2.016003, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1 (recommends: +1)

2.016003 2014-07-15T09:01:30Z
 [00 Minor]
 - dep_utils: avoid annoying deprecation warning about { chars

 [Dependencies::Stats]
 - Dependencies changed since 2.016002, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑4

2.016002 2014-07-13T06:25:05Z
 [00 Minor]
 - dep_changes util adds preludes describing the files.

 [Dependencies::Stats]
 - Dependencies changed since 2.016001, see misc/*.deps* for details
 - configure: ↑1
 - develop: (suggests: ↑1)
 - runtime: ↑4
 - test: ↑2

2.016001 2014-06-21T08:22:53Z
 [00 Minor]
 - Rework dep_changes util to use CPAN::Meta::Prereqs::Diff
 - generated perlcritic generator uses misc/ now instead.
 - generated modules come with 5.008, utf8, AUTHORITY and bumpversion ready
 - generated dist.ini comes with bumpversions enabled
 - generated dist.ini comes with copylicense

 [Dependencies::Stats]
 - Dependencies changed since 2.016000, see misc/*.deps* for details
 - develop: ↑7
 - runtime: ↑10 (recommends: +4 -1)
 - test: ↑1

2.016000 2014-06-06T07:53:47Z
 [00 Major]
 - add copyfiles attribute to easily support copying files from build.
 - add srcreadme attribute to control how README is generated in the build tree.
 - Changes.deps* generator now writes files in misc/ to keep top level clutter down.

 [Dependencies::Stats]
 - Dependencies changed since 2.015000, see misc/*.deps* for details
 - develop: +1
 - runtime: +1 ↑2
 - test: ↑2

2.015000 2014-06-03T05:21:36Z
 [00 Major]