@@ -272,7 +272,7 @@ CHI::Driver::FastMmap = 0
 Cache::FastMmap = 0
 CPAN::Meta = 0
 CPAN::Meta::Prereqs::Diff = 0
-CPAN::Changes::Group::Dependencies::Stats = 0
+CPAN::Changes::Group::Dependencies::Stats = 0.002002
 Net::GitHub = 0
 JSON = 0
 JSON::XS = 0
