@@ -26,6 +26,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Test::Kwalitee 1.18 → 1.19
  - Test::Pod::Coverage 1.08 → 1.10
 
+ [Changed / runtime recommends]
+ - CPAN::Changes::Group::Dependencies::Stats 0 → 0.002002
+
  [Changed / runtime requires]
  - Dist::Zilla::Plugin::Bootstrap::lib 1.000002 → 1.000003
  - Dist::Zilla::Plugin::Git::NextRelease 0.002010 → 0.002011
