@@ -9,6 +9,9 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  [Added / test recommends]
  - CPAN::Meta::Prereqs 2.142060
 
+ [Changed / runtime recommends]
+ - CPAN::Changes::Group::Dependencies::Stats 0 → 0.002002
+
  [Changed / test recommends]
  - CPAN::Meta 2.141520 → 2.142060
 
